CF: SF-776: Display none on 508 Compliance iframe to avoid the whitespace on the bottom of the page.

--- a/smokefree/sites/all/themes/smokefreegov/src/scss/footer.scss
+++ b/smokefree/sites/all/themes/smokefreegov/src/scss/footer.scss
@@ -347,6 +347,7 @@ section#block-boxes-live-char-bar {
 	}
 }
 
-
-
-
+/* hide 508 compliance iframe; was adding whitespace to bottom of page */
+body > iframe[title="508 compliance"]{
+	display: none;
+}
